2009-03-01  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: More info for branch checkout error. Changed git update
	command.

2009-02-27  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* templates/vertimus/vertimus_detail.html: Rename action to action_id.
	* vertimus/models.py: Useless default_storage import. Add
	get_previous_action_with_po() and state in ActionAbstract. Rename
	action to action_db when it's an ActionDb instance.
	* vertimus/urls.py: action_id_1 and action_id_2.
	* vertimus/views.py: Remove useless imports. Use real action and
	state objects. Use get_object_or_404 for the action_id_2 (URL arg).
	Coding conventions details.

2009-02-27  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* stats/management/commands/update-stats.py: Fix help message.

2009-02-14  Claude Paroz  <claude@2xlibre.net>

	* docs/notes-upgrade.txt: enlarge information.type varchar to 10 chars.
	* stats/models.py: Add 2 more information type (warn-ext, error-ext) to
	be able to select informations with external warnings/errors. These are
	always checked when recomputing stats.
	* stats/utils.py: LINGUAS warnings are of type 'warn-ext'.
	Fixes bug #567680.

2009-02-14  Claude Paroz  <claude@2xlibre.net>

	* templates/teams/team_detail.html: Also fix RTL display.
	Really fixes #571349.

2009-02-12  Claude Paroz  <claude@2xlibre.net>

	* templates/languages/language_release_stats.html: Fix graph direction
	for RTL languages.
	Fixes bug #571349.

2009-02-11  Claude Paroz  <claude@2xlibre.net>

	* stats/management/commands/update-stats.py: Implement a basic lock
	mecanism to prevent multiple stats running on same module/branch.
	Fixes bug #562947.

2009-02-10  Claude Paroz  <claude@2xlibre.net>

	* stats/management/commands/update-stats.py: Added an option to update
	all non-GNOME modules.

2009-02-06  Claude Paroz  <claude@2xlibre.net>

	* vertimus/views.py: Argh... removed pdb.set_trace() :-D

2009-02-06  Claude Paroz  <claude@2xlibre.net>
