@@ -1,7 +1,14 @@
+2009-03-03  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* stats/forms.py:
+	* stats/models.py:
+	* stats/utils.py:
+	* teams/forms.py: Removed useless imports.
+
 2009-03-01  Claude Paroz  <claude@2xlibre.net>
 
-	* stats/models.py: More info for branch checkout error. Changed git update
-	command.
+	* stats/models.py: More info for branch checkout error. Changed	git 
+	update command.
 
 2009-02-27  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
